header align correct

--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -10,3 +10,15 @@
 
     background-color: var(--color-background);
 }
+
+.left {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+}
+
+.right {
+    flex: 1;
+    display: flex;
+    flex-direction: row-reverse;
+}
